styles.css
/*stylesheet for landing page */

@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');

/*LOOK AT SHRINKING SET TO 0?? SET placeholder so text doesn't wrap?  Or min width-content?*/

* {
    box-sizing: border-box;
}
/*consider flexing body*/
/*padding? review all padding in html*/
body {
    font-family: Roboto, sans-serif;
    margin: 0;
  }

  /* not sure about padding ?? */
.top {
    background-color: #1f2937;
    color: #f9faf8;
    display: flex;
    flex-direction: column;
    padding-left: 10em;
    padding-right: 10em;
    padding-bottom: 10em;
}

/* flex ul to display li items horizontally*/
/*remove bullets on ul with list style none*/
ul {
    list-style: none;
    display: flex;
    gap: 24px;
}

/*removes underline on hyperlink*/
a {
    text-decoration: none;
    font-size: 18px;
    color: #e5e7eb;
    padding-bottom: 10px;
  }

.header {
    display: flex;
    align-items: center;
    justify-content:space-between;
    padding-bottom: 7em;
}

/* the logo looked better in bold */
.logo-text {
    font-size: 24px;
    font-weight: bolder;
}

.hero {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2em;
}

.main-text {
    font-size: 48px;
    font-weight: 900;
}

.hero-left {
    display: flex;
    flex-direction: column;
    align-items:flex-start;
}

/* CHANGE THIS INTO AN ACTUAL IMG PLACEHOLDER */
/* expands color into whole flex item area*/
.hero-right {
    display: flex;
    flex-basis: 100%;
    justify-content: center;
    align-items: center;
    align-self: stretch;
    min-width: fit-content;
    background:  rgb(101, 106, 110);
}

.img-holder {
    display: flex;
    justify-content: center;
    flex-grow: 1;
    flex-shrink: 0;
}

.img {
    height: 100%;
    width: 100%;
    position: absolute;
    object-fit:cover;
}

/* consider breaking out common button styles to button div */

.sign-up {
    border: none;
    border-radius: 8px;
    background: #3882F6;
    color: white;
    padding: 8px 32px;
    font-size: 16px;
    font-weight:bold;
  }

